[package]
edition = "2024"
name = "bevy_newtonian2d"
version = "0.19.0"
authors = ["Josiah Putman <joshikatsu@gmail.com>"]
description = "Simple 2D Newtonian physics engine for Bevy."
documentation = "https://docs.rs/bevy_newtonian2d/latest/bevy_newtonian2d"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/Katsutoshii/bevy_newtonian2d"
repository = "https://github.com/Katsutoshii/bevy_newtonian2d"
keywords = ["bevy"]
readme = "README.md"
exclude = ["assets/*"]

[dependencies]
bevy = { version = "0.19", default-features = false, features = [
    "std",
    "bevy_state",
] }

derive_more = { version = "1.0", features = [
    "add",
    "add_assign",
    "deref",
    "deref_mut",
] }
serde = { version = "1.0", features = ["serde_derive"] }

[dev-dependencies]
bevy = { version = "0.19", default-features = true, features = [
    "bevy_dev_tools",
    "dynamic_linking",
] }

[[example]]
name = "bouncing_balls"

[[example]]
name = "stress_test"
